Add command to update generated crates
This command copies and transforms the generated crates
so that they can be used with git dependencies.

Change-Id: I4f1b8c29c9d937ee40776234f5855211df8d7cfe

--- a/fargo-test/Cargo.toml
+++ b/fargo-test/Cargo.toml
@@ -6,6 +6,7 @@ authors = ["Rob Tsuk <robtsuk@google.com>"]
 [dependencies]
 magenta = "0.1.0"
 mxruntime = "0.1.0"
+apps_mozart_services_buffers = { git = "https://fuchsia.googlesource.com/fuchsia-crates" }
 
 [[test]]
 name = "bork"
