--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Rob Tsuk <robtsuk@google.com>"]
 
 [dependencies]
 clap = "2"
-error-chain = "0.10.0"
+error-chain = "0.11.0-rc.2"
 serde = "1.0.9"
 serde_derive = "1.0.9"
 serde_json = "1.0.2"
