--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -4,7 +4,7 @@ skip_children = false
 max_width = 100
 error_on_line_overflow = true
 tab_spaces = 4
-fn_call_width = 60
+fn_call_width = 100
 struct_lit_width = 18
 struct_variant_width = 35
 force_explicit_abi = true
@@ -22,7 +22,7 @@ fn_args_paren_newline = false
 fn_args_density = "Tall"
 fn_args_layout = "Block"
 array_layout = "Block"
-array_width = 60
+array_width = 100
 type_punctuation_density = "Wide"
 where_style = "Rfc"
 where_density = "CompressedIfEmpty"
@@ -35,18 +35,18 @@ fn_call_style = "Block"
 report_todo = "Never"
 report_fixme = "Never"
 chain_indent = "Block"
-chain_one_line_max = 60
+chain_one_line_max = 100
 chain_split_single_child = false
-reorder_imports = false
-reorder_imports_in_group = false
-reorder_imported_names = false
-single_line_if_else_max_width = 50
+reorder_imports = true
+reorder_imports_in_group = true
+reorder_imported_names = true
+single_line_if_else_max_width = 100
 format_strings = false
 force_format_strings = false
 take_source_hints = false
 hard_tabs = false
 wrap_comments = false
-comment_width = 80
+comment_width = 100
 normalize_comments = false
 wrap_match_arms = true
 match_block_trailing_comma = false
@@ -63,6 +63,6 @@ spaces_within_angle_brackets = false
 spaces_within_square_brackets = false
 spaces_within_parens = false
 use_try_shorthand = false
-write_mode = "Replace"
+write_mode = "Overwrite"
 condense_wildcard_suffixes = false
 combine_control_expr = true
