--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,13 +5,14 @@ authors = ["Rob Tsuk <robtsuk@google.com>"]
 
 [dependencies]
 clap = "2"
-error-chain = "0.11.0-rc.2"
+error-chain = "0.11.0"
+nom = "3.2.0"
+notify = "4.0.0"
 serde = "1.0.9"
 serde_derive = "1.0.9"
 serde_json = "1.0.2"
 toml = "0.4.2"
 uname = "0.1.1"
-notify = "4.0.0"
 
 [[bin]]
 name = "fargo"
