--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ authors = ["Rob Tsuk <robtsuk@google.com>"]
 clap = "2"
 error-chain = "0.11.0"
 nom = "3.2.0"
+uname = "0.1.1"
 notify = "4.0.0"
 uname = "0.1.1"
 
