--- a/fargo-test/Cargo.toml
+++ b/fargo-test/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["Rob Tsuk <robtsuk@google.com>"]
 
 [dependencies]
-magenta = "0.1.0"
+fuchsia-zircon = "0.2.0"
 mxruntime = "0.1.0"
 apps_mozart_services_buffers = { git = "https://fuchsia.googlesource.com/fuchsia-crates" }
 
