--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "fargo"
-version = "0.1.1"
+version = "0.2.0"
 authors = ["Rob Tsuk <robtsuk@google.com>"]
 
 [dependencies]
 clap = "2"
-error-chain = "0.11.0"
+failure = "0.1.1"
 uname = "0.1.1"
 notify = "4.0.0"
 
