--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,9 @@ clap = "2"
 failure = "0.1.1"
 uname = "0.1.1"
 notify = "4.0.0"
+serde = "1.0"
+serde_derive = "1.0"
+toml = "0.4"
 
 [[bin]]
 name = "fargo"
