Add command to generate facades
Add a command to generate a facade crate for a given gn path
and label, as well as adding the facade to the workspace and
creating a patch entry for it.

Change-Id: Ic01e27a570ce0bfd52418768f6821985e258f77a

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,12 @@ authors = ["Rob Tsuk <robtsuk@google.com>"]
 [dependencies]
 clap = "2"
 failure = "0.1.1"
+itertools = "0.7"
 uname = "0.1.1"
 notify = "4.0.0"
+serde = "1.0"
+serde_derive = "1.0"
+toml = "0.4"
 
 [[bin]]
 name = "fargo"
